update fingerprinting logic
