# src/modules/auth/schemas/login.schema.js
@@ -1,22 +1,17 @@
 /* eslint-disable security/detect-non-literal-fs-filename */
 
-const { body } = require('express-validator');
+const validators = require('../../../utils/validators.util');
 
 module.exports = [
-    body('email')
-        .trim()
-        .toLowerCase()
+    validators.email
         .exists({ checkNull: true, checkFalsy: true })
-        .withMessage('The email is required')
-        .isLength({ min: 5, max: 64 })
-        .withMessage('The email must be between 5 and 64 characters')
-        .isEmail()
-        .withMessage('The email format is invalid'),
+        .withMessage('The email is required'),
 
-    body('password')
-        .trim()
+    validators.password
         .exists({ checkNull: true, checkFalsy: true })
-        .withMessage('The password is required')
-        .isLength({ min: 8, max: 16 })
-        .withMessage('The password must be between 8 and 16 characters'),
+        .withMessage('The password is required'),
+
+    validators.browserFingerprint
+        .exists({ checkNull: true, checkFalsy: true })
+        .withMessage('The browser_fingerprint is required'),
 ];
