# swagger.json
@@ -610,11 +610,15 @@
                     },
                     "password": {
                         "type": "string"
+                    },
+                    "browser_fingerprint": {
+                        "type": "string"
                     }
                 },
                 "required": [
                     "email",
-                    "password"
+                    "password",
+                    "browser_fingerprint"
                 ]
             },
             "UserRevokeRefreshToken": {
@@ -637,10 +641,14 @@
                 "properties": {
                     "refresh_token": {
                         "type": "string"
+                    },
+                    "browser_fingerprint": {
+                        "type": "string"
                     }
                 },
                 "required": [
-                    "refresh_token"
+                    "refresh_token",
+                    "browser_fingerprint"
                 ]
             },
             "User": {
